--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </style>
 </head>
 <body>
+    <h1>Kontol</h1>
     <section id="header">
         <a href="#"><img src="img/logo.png" class="logo" alt=""></a>
 
