--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 </head>
 <body>
     <h1>Kontol</h1>
+    <h2 class="blabla">Chibaikang</h2>
     <section id="header">
         <a href="#"><img src="img/logo.png" class="logo" alt=""></a>
 
